{
    "name": "Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a8bb4c64-adec-4064-bc5c-49f98b3c942f",
            "actions": [
                {
                    "name": "MouseDirection",
                    "type": "Value",
                    "id": "a9c48d82-aee9-4d31-848b-07df9e0e01c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeft",
                    "type": "Button",
                    "id": "b2747155-a346-4eb6-bcc9-ad427f5c85ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "49b00fd7-2ad6-4412-8a0b-0b5a7e6fbfee",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "MouseDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e47e4c9-4767-4883-84bb-75a5a19e06b8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}